# voting_app

projects/voting_app/v1/: index.html  scripts.js  styles.css
projects/voting_app/v1/server/: Cargo.toml
projects/voting_app/v1/server/src/: main.rs
