[package]
name = "voting_app"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
aws-sdk-qldb = "1.1.0"
actix-cors = "0.6.4"
actix-web = "4.4.0"
env_logger = "0.10.1"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
dotenv = "0.15.0"
tokio = { version = "1.34.0", features = ["full"] }